<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>github.chatapp.server</groupId>
	<artifactId>chatapp.server</artifactId>
	<name>ChatAppServer</name>
	<version>1.0-rc</version>
	<packaging>jar</packaging>

	<properties>
		<mainClass>github.chatapp.server.main.java.ServerLauncher</mainClass>
		<src.resources>src/github/chatapp/server/main/resources</src.resources>
		<target.resources>${project.build.directory}/classes/github/chatapp/server/main/resources/</target.resources>
	</properties>

	<licenses>
		<license>
			<name>GNU Affero General Public Licence, Version 3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
		</license>
	</licenses>
	<inceptionYear>2023</inceptionYear>

	<dependencies>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-all</artifactId>
			<version>4.1.114.Final</version>
		</dependency>

		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-tcnative-boringssl-static</artifactId>
			<version>2.0.66.Final</version>
		</dependency>

		<dependency>
			<groupId>github.chatapp.common</groupId>
			<artifactId>chatapp.common</artifactId>
			<version>1.0-rc</version>
		</dependency>

		<dependency>
			<groupId>me.gosimple</groupId>
			<artifactId>nbvcxz</artifactId>
			<version>1.5.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.19.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.19.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.3.0-jre</version>
		</dependency>

		<dependency>
			<groupId>com.password4j</groupId>
			<artifactId>password4j</artifactId>
			<version>1.6.0</version>
		</dependency>

		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.1</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.30</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.5</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>

	</dependencies>

	<build>

		<sourceDirectory>src</sourceDirectory>
		<finalName>ChatAppServer</finalName>

		<resources>

			<resource>
				<directory>${src.resources}</directory>
				<targetPath>${target.resources}</targetPath>
			</resource>

		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Build an executable JAR -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-Djava.security.egd=file:/dev/./urandom</argument>
						<argument>-server</argument>
						<argument>-XX:+UseZGC</argument>
						<argument>--add-opens</argument>
						<argument>java.base/java.lang=ALL-UNNAMED</argument>
						<argument>--add-opens</argument>
						<argument>java.base/jdk.internal.misc=ALL-UNNAMED</argument>
						<argument>--add-opens</argument>
						<argument>java.base/java.nio=ALL-UNNAMED</argument>
						<argument>-Dio.netty.tryReflectionSetAccessible=true</argument>
						<argument>-Dfile.encoding=UTF-8</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>${mainClass}</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
